[package]
name = "chess-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.2.0"
io = "0.0.2"
rocket = "=0.5.0-rc.3"
serde = { version = "1.0", features = ["derive"] }
rocket_contrib = "0.4"
